# scalableMachineLearning

./: .gitignore  CMakeLists.txt  README.md
L1SubgradientOptimization/: README.md  pom.xml
L1SubgradientOptimization/src/main/scala/L1_Subgradient/: DistributedL1SubgradientOptimizer.scala  SerialL1Optimizer.scala
MRFGenerators/: CMakeLists.txt  acyclicGraph.cpp  convertHDF5ToCSV.cpp
MRFGenerators/include/: common.h
diffusionGraphX/: README.md  pom.xml
diffusionGraphX/benchmark/snail/: edgeListFile.txt  nrLabels.csv  pairwiseFactors.csv  uFactors.csv
diffusionGraphX/benchmark/toy/: pairwiseFactors.csv  uFactors.csv
diffusionGraphX/benchmark/toy2/: edgeListFile.txt  pwFactors.csv  uFactors.csv
diffusionGraphX/benchmark/toy3/: pwFactors.csv  uFactors.csv
diffusionGraphX/benchmark/triplepoint4-plain-ring/: edgeListFile.txt  nrLabels.csv  pwFactors.csv  triplepoint4-plain-ring.h5  uFactors.csv
diffusionGraphX/src/benchmarkConverter/: CMakeLists.txt  readBenchmark.cpp
diffusionGraphX/src/main/scala/Diffusion/: DiffusionGraphX.scala  DiffusionPartitioner.scala  DiffusionPregel.scala  EdgeData.scala  LinearPartitioner.scala  PregelVertexData.scala  VertexData.scala
diffusionGraphX/src/main/scala/tools/: HDF5Reader.scala
diffusionMPI/: CMakeLists.txt  README.md
diffusionMPI/cmake/modules/: FindOpenGM.cmake
diffusionMPI/header/: common.h  diffusionMPI.hxx  diffusion_mpi_rewrite.hxx  parallelDiffusion.hxx  reparametrization.hxx
diffusionMPI/src/: diffusionMPI.cpp  diffusion_mpi_rewrite.cpp
header/: diffusion_mpi_rewrite.hxx  diffusionwernersequential.hxx  reparametrization_mpi.hxx
src/: main.cpp  parallelDiffusion.cpp
